--- a/polder/card.html
+++ b/polder/card.html
@@ -20,6 +20,28 @@
             </div>
         </div>
 
+        <br>
+
+        <!-- With Header and Footer -->
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card bg-secondary">
+                        <div class="card-header bg-dark text-white">
+                            <h1>JavaScript</h1>
+                        </div>
+                        <div class="card-body bg-dark text-white">
+                            <p>JavaScript is the world's most popular programming language.</p>
+                        </div>
+                        <div class="card-footer bg-dark text-white">
+                            <a href="https://rb.gy/ghkah" class="btn btn-danger">Click me</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
